# systemx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SYSTEMX_INSTALL.md  build.sh  driver.cpp  driver.hpp  main.cpp  run-ncu.sh  run-nsys.sh  systemxConfig.h.in  systemxConfig.hpp.in
benchmarks/: BENCHMARK_GENERATE.md  CMakeLists.txt  example.json  idle,idle-concurrent-colocated.json  idle,idle-concurrent-isolated.json  idle.json  main.cpp  script.sh
kernels/: alu.cu  cublas.cu  cublas_gemm.cu  gmem.cu  idle.cu  kernels.hpp  l1.cu  l2.cu  pcie.cu  register_compute.cu
scripts/: run-benchmark-combinations.sh
utils/: CMakeLists.txt  helper_cuda.cpp  helper_cuda.hpp  helper_string.cpp  helper_string.hpp  shared_object.hpp  timer.cpp  timer.hpp  utils.hpp
